--- a/package.json
+++ b/package.json
@@ -27,12 +27,18 @@
     "babel-cli": "^6.1.18",
     "babel-loader": "^6.1.0",
     "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
     "babel-preset-stage-0": "^6.1.18",
     "istanbul": "^0.4.0",
     "jscs": "^2.5.1",
     "jshint": "^2.8.0",
     "mocha": "^2.3.3",
     "questy": "^1.1.0",
+    "react-addons-test-utils": "^0.14.3",
     "webpack": "^1.12.6"
+  },
+  "dependencies": {
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3"
   }
 }
