--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "coverage": "node_modules/.bin/istanbul cover --hook-run-in-context node_modules/.bin/_mocha -- -R spec",
     "test": "npm run mocha; npm run jshint; npm run jscs",
-    "mocha": "node_modules/.bin/_mocha",
+    "mocha": "node_modules/.bin/_mocha --compilers js:babel-core/register",
     "compile": "node_modules/.bin/babel --presets es2015,stage-0 -d lib/ src/",
     "build": "./node_modules/.bin/webpack",
     "prepublish": "npm run test; npm run compile; npm run build",
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/Aloompa/react-webpack-babel-project-boilerplate#readme",
   "devDependencies": {
     "babel-cli": "^6.1.18",
+    "babel-core": "^6.2.1",
     "babel-loader": "^6.1.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
